--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,9 @@ _*
 Thumbs.db
 ehthumbs.db
 
+# VSCode Files //My Bad - Faiza #
+.vscode
+
 # Filenames with special characters
 **/*[\\/\:;*?!'"<>|$º•¶§∞¢£]*
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
